[Re #57] Added a field to the Monetary Donation Form to allow the donor to designate a purpose for the funds.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
@@ -22,10 +22,19 @@
             </span>
         </p>
         <p>
-            Your Email address:{{ form.email }}
+            Your Email address: {{ form.email }}
             <span class="error_message">
                 {{ form.email.errors.as_text }}
             </span>
+        </p>
+        <p>
+            Designate donation for: {{ form.purpose }}
+            <span class="error_message">
+                {{ form.purpose.errors.as_text }}
+            </span>
+            <br />
+            (leave blank to not designate the donation for a specific purpose)
+        </p>
         </div>
         <div id="SubmitButton">
             <input type="Submit" value="Submit">
