[Re #58] Added Physician's Release link to public forms index. Modified Physician's Release links in Medical History form to open in a new tab/window.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
@@ -1,4 +1,7 @@
 {% extends "cbar_db/template.html" %}
+{% block header %}
+    {% load staticfiles %}
+{% endblock %}
 {% block body %}
     <p>
         Welcome to the public forms index. Please click a form below to continue.
@@ -6,7 +9,8 @@
 
     <ul>
         <li><a href="{% url 'public-form-application' %}">Application</a></li>
-        <li><a href="{% url 'public-form-med-release' %}">Medical Release</a></li>
+        <li><a href="{% url 'public-form-med-release' %}">Medical History</a></li>
+        <li><a href="{% static "cbar_db/pdf/medical.pdf" %}">Medical Evaluation &amp; Physician's Release (PDF)</a></li>
         <li><a href="{% url 'public-form-emerg-auth' %}">Emegency Medical Treatment Authorization</a></li>
         <li><a href="{% url 'public-form-liability' %}">Liability Release</a></li>
         <li><a href="{% url 'public-form-media' %}">Media Release</a></li>
