--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/medical_release.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/medical_release.html
@@ -160,9 +160,10 @@
             </span>
         </p>
         <p>
-            If yes, please print <a href="{% static "cbar_db/pdf/medical.pdf" %}">
-                the medical evaluation form</a>, fill out the non-physician
-                portion of it, and bring it with you to your first session.
+            If yes, please print
+             <a href="{% static "cbar_db/pdf/medical.pdf" %}" target="_blank">
+             the medical evaluation form</a>, fill out the non-physician
+             portion of it, and bring it with you to your first session.
         </p>
         <p>
             Do you have any physical and/or mental health conditions,
@@ -214,9 +215,10 @@
             </span>
         </p>
         <p>
-            If yes, please print <a href="{% static "cbar_db/pdf/medical.pdf" %}">
-                the medical evaluation form</a>, fill out the non-physician
-                portion of it, and bring it with you to your first session.
+            If yes, please print
+             <a href="{% static "cbar_db/pdf/medical.pdf" %}" target="_blank">
+             the medical evaluation form</a>, fill out the non-physician
+             portion of it, and bring it with you to your first session.
         </p>
         <p>
             In the last 6 months, have you had ANY surgeries
