[re #74] Added login text to admin page.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/login.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/login.html
@@ -15,6 +15,9 @@
     <form method="post" action="{% url 'user-login' %}">
         {% csrf_token %}
         <p>
+            Enter your login information to enter the administration area of the database.
+        </p>
+        <p>
             {{ form.username.label_tag }}
             {{ form.username }}
         </p>
