[Re #55] Cleaned up participant.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -40,7 +40,7 @@
                 <strong>Work Phone</strong><br /> {{ participant.phone_work }}
             </div>
             <div class="floating_block">
-                <strong>Email</strong><br /> <a href="mailto</strong><br />{{ participant.email }}">
+                <strong>Email</strong><br /> <a href="mailto:{{ participant.email }}">
                     {{ participant.email }}</a>
             </div>
             <div class="floating_block">
