[Re #62] Added 'Horse Leader' field to session_plan.html

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
@@ -19,6 +19,7 @@
                 </span>
 
                 Horse: {{ form.horse_name }}
+                Horse Leader: {{ form.horse_leader }}
                 <br />
                 Tack: {{ form.tack }}
                 <span class="error_message">
