--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -1,5 +1,15 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
+<style>
+    .name_column, .willingness_column, .motivation_column, .appearance_column{
+        float: left;
+        width: 25%;
+        min-height: 1px;
+    }
+    li{
+        display:inline-block;
+    }
+</style>
     <h1>Observation Evaluation</h1>
     {% if error_text %}
         <p></strong>
@@ -10,102 +20,326 @@
     {% endif %}
     <form action="{% url 'private-form-observation-evaluation' participant.participant_id %}" method="post">
         {% csrf_token %}
-        <p> Participant: {{ participant }}</p>
 
         <p>
-            Date: {{ form.date }}
+            <strong>Participant:</strong> {{ participant }}
         </p>
-
         <p>
-            Walking through barn: {{ form.walking_through_barn }}
+            <strong>Date:</strong> {{ form.date }}
             <span class="error_message">
-                {{ form.walking_through_barn.error.as_text }}
+                {{ form.date.errors.as_text }}
             </span>
         </p>
+        <br>
+        <div id="observation_evaluation_content">
+            <div class="observation_eval_row">
+                <div class="name_column">
+                </div>
 
-        <p>
-            Looking at the Horses: {{ form.looking_at_horses }}
-            <span class="error_message">
-                {{ form.looking_at_horses.error.as_text }}
-            </span>
-        </p>
+                <div class="willingness_column" style="text-align: center;">
+                    <!-- W radio buttons -->
+                    W:
+                </div>
+                <div class="motivation_column" style="text-align: center;">
+                    <!-- M radio buttons -->
+                    M:
+                </div>
+                <div class="appearance_column" style="text-align: center;">
+                    <!-- A radio buttons -->
+                    A:
+                </div>
+            </div>
+        </div>
 
-        <p>
-            Petting The horses: {{ form.petting_horses }}
-        <span class="error_message">
-            {{ form.petting_horse.error.as_text }}
-        </span>
-        </p>
+        <div id="observation_evaluation_content">
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Walking through Barn:</strong>
+                </div>
 
-        <p>
-            Up and Down Ramp: {{ form.up_down_ramp }}
-        <span class="error_message">
-            {{ form.up_down_ramp.error.as_text }}
-        </span>
-        </p>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
 
-        <p>
-            Mounting Before: {{ form.mounting_before }}
-        <span class="error_message">
-            {{ form.mounting_before.error.as_text }}
-        </span>
-        </p>
+                    {{ form.walking_through_barn_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
 
-        <p>
-            Mounting after: {{ form.mounting_after }}
-        <span class="error_message">
-            {{ form.mounting_after.error.as_text }}
-        </span>
-        </p>
+                    {{ form.walking_through_barn_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
 
-        <p>
-            Riding Before: {{ form.riding_before }}
-        <span class="error_message">
-            {{ form.riding_before.error.as_text }}
-        </span>
-        </p>
+                    {{ form.walking_through_barn_appearance }}
+                </div>
+            </div>
+        </div>
 
-        <p>
-            Riding During: {{ form.riding_during }}
-        <span class="error_message">
-            {{ form.riding_during.error.as_text }}
-        </span>
-        </p>
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Looking at Horses:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
 
-        <p>
-            Riding After: {{ form.riding_after }}
-        <span class="error_message">
-            {{ form.riding_after.error.as_text }}
-        </span>
-        </p>
+                    <!-- W radio buttons -->
 
-        <p>
-            Understands Directions: {{ form.understands_directions }}
-        <span class="error_text">
-            {{ form.understands_directions.error.as_text }}
-        </span>
-        </p>
+                    {{ form.looking_at_horses_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
 
-        <p>
-            Participates in Excercises: {{ form.participates_exercises}}
-        <span class="error_message">
-            {{ form.participates_exercises.error.as_text }}
-        </span>
-        </p>
+                    {{ form.looking_at_horses_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
 
-        <p>
-            Participates in Games: {{ form.participates_games }}
-        <span class="error_message">
-            {{ form.participates_games.error.as_text }}
-        </span>
-        </p>
+                    {{ form.looking_at_horses_appearance }}
+                </div>
+            </div>
 
-        <p>
-            General Attitude: {{ form.general_attitude}}
-        <span class="error_message">
-            {{ form.general_attitude.error.as_text}}
-        </span>
-        </p>
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Petting the Horses:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.petting_horses_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.petting_horses_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.petting_horses_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Up and Down ramp:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.up_down_ramp_willing}}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.up_down_ramp_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.up_down_ramp_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Mounting Before:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.mounting_before_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.mounting_before_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.mounting_before_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Mounting After:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.mounting_after_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.mounting_after_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.mounting_after_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Riding Before:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+
+                    <!-- W radio buttons -->
+                    {{ form.riding_before_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.riding_before_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.riding_before_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Riding During:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.riding_during_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.riding_during_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.riding_during_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Riding After:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.riding_after_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.riding_after_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.riding_after_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Understands Directions:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.understands_directions_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.understands_directions_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.understands_directions_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Participates in Exercises:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.participates_exercises_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.participates_exercises_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.participates_exercises_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>Participates in Games:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.participates_games_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.participates_games_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.participates_games_appearance }}
+                </div>
+            </div>
+
+            <div class="observation_eval_row">
+                <div class="name_column">
+                    <strong>General Attitude:</strong>
+                </div>
+                <br>
+                <div class="willingness_column">
+                    <!-- W radio buttons -->
+
+                    {{ form.general_attitude_willing }}
+                </div>
+                <div class="motivation_column">
+                    <!-- M radio buttons -->
+
+                    {{ form.general_attitude_motivated }}
+                </div>
+                <div class="appearance_column">
+                    <!-- A radio buttons -->
+
+                    {{ form.general_attitude_appearance }}
+                </div>
+            </div>
         <input type="Submit" value="Submit" />
+    </div>
     </form>
 {% endblock %}
