--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -9,16 +9,20 @@
     <form action="{% url 'public-form-application' %}" method="post">
         {% csrf_token %}
         <p>
-            Name: {{ form.name }}
+            Fields with an <span style="color: red">*</span> next to them are
+             required.
+        </p>
+        <p>
+            <span style="color: red">*</span> Name: {{ form.name }}
             <span class="error_message">
                 {{ form.name.errors.as_text }}
             </span>
-            Date of Birth: {{ form.birth_date }}
+            <span style="color: red">*</span> Date of Birth: {{ form.birth_date }}
             <span class="error_message">
                 {{ form.birth_date.errors.as_text }}
             </span>
             <br />
-            Height: {{ form.height_feet }}
+            <span style="color: red">*</span> Height: {{ form.height_feet }}
             <span class="error_message">
                 {{ form.height_feet.errors.as_text }}
             </span>
@@ -26,46 +30,46 @@
             <span class="error_message">
                 {{ form.height_inches.errors.as_text }}
             </span>
-            Weight: {{ form.weight }} lbs
+            <span style="color: red">*</span> Weight: {{ form.weight }} lbs
             <span class="error_message">
                 {{ form.weight.errors.as_text }}
             </span>
             <br />
-            Gender: {{ form.gender }}
+            <span style="color: red">*</span> Gender: {{ form.gender }}
             <span class="error_message">
                 {{ form.gender.errors.as_text }}
             </span>
-            Minor Status: {{ form.minor_status }}
+            <span style="color: red">*</span> Minor Status: {{ form.minor_status }}
             <span class="error_message">
                 {{ form.minor_status.errors.as_text }}
             </span>
             <br />
-            School or Institution presently attending:
+            <span style="color: red">*</span> School or Institution presently attending:
             {{ form.school_institution }}
             <span class="error_message">
                 {{ form.school_institution.errors.as_text }}
             </span>
             <br />
-            If minor or adult with legal guardian, parent or legal guardian
+            <span style="color: red">*</span> If minor or adult with legal guardian, parent or legal guardian
             name(s): {{ form.guardian_name }}
             <span class="error_message">
                 {{ form.guardian_name.errors.as_text }}
             </span>
             <br />
-            Street Address: {{ form.address_street }}
+            <span style="color: red">*</span> Street Address:  {{ form.address_street }}
             <span class="error_message">
                 {{ form.address_street.errors.as_text }}
             </span>
-            City: {{ form.address_city }}
+            <span style="color: red">*</span> City: {{ form.address_city }}
             <span class="error_message">
                 {{ form.address_city.errors.as_text }}
             </span>
             <br />
-            State: {{ form.address_state }}
+            <span style="color: red">*</span> State: {{ form.address_state }}
             <span class="error_message">
                 {{ form.address_state.errors.as_text }}
             </span>
-            Zip Code: {{ form.address_zip }}
+            <span style="color: red">*</span> Zip Code: {{ form.address_zip }}
             <span class="error_message">
                 {{ form.address_zip.errors.as_text }}
             </span>
@@ -84,7 +88,7 @@
                 {{ form.phone_work.errors.as_text }}
             </span>
             <br />
-            E-Mail Address: {{ form.email }}
+            <span style="color: red">*</span> E-Mail Address: {{ form.email }}
             <span class="error_message">
                 {{ form.email.errors.as_text }}
             </span>
