--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
@@ -9,7 +9,11 @@
     <form action="{% url 'public-form-background' %}" method="post">
         {% csrf_token %}
         <p>
-            I, {{ form.name }}<span class="error_message">
+            Fields with an <span style="color: red">*</span> next to them are
+             required.
+        </p>
+        <p>
+            I, <span style="color: red">*</span> {{ form.name }}<span class="error_message">
          {{ form.name.errors.as_text }} </span> of lawful age, do hereby
          authorize C-Bar Therapeutic
          Riding to receive information from federal, state, and local law
@@ -19,23 +23,23 @@
          required to properly identify me for this specific purpose, including
          but not limited to current and previous residential addresses, social
          security number and driver’s license number.</p>
-        <p> Signature: {{ form.signature }}
+        <p><span style="color: red">*</span> Signature: {{ form.signature }}
          <span class="error_message">
                 {{ form.signature.errors.as_text }}
         </span>
-         Date: {{ form.date }}
+         <span style="color: red">*</span> Date: {{ form.date }}
          <span class="error_message">
              {{ form.date.errors.as_text }}
          </span>
          </p>
          <p>
-         Date of Birth {{ form.birth_date }}
+         <span style="color: red">*</span> Date of Birth {{ form.birth_date }}
          <span class="error_message">
             <form.birth_date.errors.as_text }}
         </span>
         </p>
         <p>
-         Drivers License Number {{form.driver_license_num}}
+        <span style="color: red">*</span> Drivers License Number {{form.driver_license_num}}
          <span class="error_message">
              {{ form.driver_license_num.errors.as_text }}
          </span>
