[re #45] abbreviated words and fixed a capitilization error

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -38,15 +38,15 @@
 
                 <div class="willingness_column" style="text-align: center;">
                     <!-- W radio buttons -->
-                    W:
+                    will:
                 </div>
                 <div class="motivation_column" style="text-align: center;">
                     <!-- M radio buttons -->
-                    M:
+                    motiv:
                 </div>
                 <div class="appearance_column" style="text-align: center;">
                     <!-- A radio buttons -->
-                    A:
+                    Appea:
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Up and Down ramp:</strong>
+                    <strong>Up and Down Ramp:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
