[re #88] Set date field to display current date.. also changed a typo just to do it

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
@@ -251,7 +251,7 @@
           </div>
           <div id="basic_seat_english">
             <p>
-                <b><u>Basic Seat - Englsh:</u></b> {{ form.basic_seat_english }}
+                <b><u>Basic Seat - English:</u></b> {{ form.basic_seat_english }}
                 <span class="error_message">
                     {{ form.basic_seat_english.errors.as_text }}
                 </span>
