[Re #48] Renamed 'gait_standing_down' field to 'gait_sitting_down'

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -215,13 +215,13 @@
                         {% endfor %}
                     </p>
                 </div>
-                <div id="gait_standing_down">
-                    <p><strong>Standing Down <span style="color:red">NAMING IS A THING</span></strong></p> <!-- Um... lah? -->
+                <div id="gait_sitting_down">
+                    <p><strong>Sitting Down</p>
                     <p>
                         {% for form, participant in formset_and_participants %}
                             {{ participant }}:
-                             {{ form.gait_standing_down }}
-                             {{ form.gait_standing_down.errors.as_text }}
+                             {{ form.gait_sitting_down }}
+                             {{ form.gait_sitting_down.errors.as_text }}
                             <br />
                         {% endfor %}
                     </p>
