[re #45] test added views finished and template changes made.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -18,6 +18,7 @@
         {{ form.non_field_errors }}
         {{ form.errors }}
     {% endif %}
+    {% if participant %}
     <form action="{% url 'private-form-observation-evaluation' participant.participant_id %}" method="post">
         {% csrf_token %}
 
@@ -342,4 +343,5 @@
         <input type="Submit" value="Submit" />
     </div>
     </form>
+{% endif %}
 {% endblock %}
