[re #45] Wrote some tests for saved valid data and no participants found.Got rid of partcipant call in views.py for observation evaluation. Fixed spelling errors and abbreviations on observation evaluation template.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -39,15 +39,15 @@
 
                 <div class="willingness_column" style="text-align: center;">
                     <!-- W radio buttons -->
-                    will:
+                    Will:
                 </div>
                 <div class="motivation_column" style="text-align: center;">
                     <!-- M radio buttons -->
-                    motiv:
+                    Motiv:
                 </div>
                 <div class="appearance_column" style="text-align: center;">
                     <!-- A radio buttons -->
-                    Appea:
+                    App:
                 </div>
             </div>
         </div>
