[Re #73] Changed header links to Donation, Registration, and Administration

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <p>
-        Welcome to the public forms index. Please click a form below to continue.
+        Welcome to the registration forms index. Please click a form below to continue.
     </p>
 
     <ul>
