--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -1,14 +1,6 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
     <h1>Administration</h1>
-    <h2>Participants</h2>
-    <ul>
-        {% for participant in participants %}
-            <li>
-                <a href="{% url 'participant-record' participant.participant_id %}">
-                    {{ participant.name }} ({{ participant.birth_date }})
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+    <h3>Private Forms</h3>
+    <h3><a href="{% url 'report-select-participant' %}">Participant Records</a></h3>
 {% endblock %}
