--- a/cb_info_db/cbar_db/templates/cbar_db/template.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/template.html
@@ -11,7 +11,7 @@
             <div class="nav">
                 <a class="button" href="{% url 'donation-index' %}">Donation</a>
                 <a class="button" href="{% url 'index-public-forms' %}">Registration</a>
-                <a class="button" href="{% url 'index-admin-reports' %}">Administration</a>
+                <a class="button" href="{% url 'index-admin' %}">Administration</a>
             </div>
         </div>
 
