--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
@@ -11,7 +11,7 @@
         <li><a href="{% url 'public-form-application' %}">Application</a></li>
         <li><a href="{% url 'public-form-med-release' %}">Medical History</a></li>
         <li><a href="{% static "cbar_db/pdf/medical.pdf" %}">Medical Evaluation &amp; Physician's Release (PDF)</a></li>
-        <li><a href="{% url 'public-form-emerg-auth' %}">Emegency Medical Treatment Authorization</a></li>
+        <li><a href="{% url 'public-form-emerg-auth' %}">Emergency Medical Treatment Authorization</a></li>
         <li><a href="{% url 'public-form-liability' %}">Liability Release</a></li>
         <li><a href="{% url 'public-form-media' %}">Media Release</a></li>
         <li><a href="{% url 'public-form-background' %}">Background Check Authorization</a></li>
