--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -21,6 +21,10 @@
     {% if participant %}
     <form action="{% url 'private-form-observation-evaluation' participant.participant_id %}" method="post">
         {% csrf_token %}
+        <p>
+            Fields with an <span style="color: red">*</span> next to them are
+             required.
+        </p>
 
         <p>
             <strong>Participant:</strong> {{ participant }}
@@ -55,7 +59,7 @@
         <div id="observation_evaluation_content">
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Walking through Barn:</strong>
+                    <span style="color: red">*</span> <strong>Walking through Barn:</strong>
                 </div>
 
                 <div class="willingness_column">
@@ -78,7 +82,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Looking at Horses:</strong>
+                    <span style="color: red">*</span> <strong>Looking at Horses:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -101,7 +105,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Petting the Horses:</strong>
+                    <span style="color: red">*</span> <strong>Petting the Horses:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -123,7 +127,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Up and Down Ramp:</strong>
+                    <span style="color: red">*</span> <strong>Up and Down Ramp:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -145,7 +149,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Mounting Before:</strong>
+                    <span style="color: red">*</span> <strong>Mounting Before:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -167,7 +171,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Mounting After:</strong>
+                    <span style="color: red">*</span> <strong>Mounting After:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -189,7 +193,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Riding Before:</strong>
+                    <span style="color: red">*</span> <strong>Riding Before:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -211,7 +215,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Riding During:</strong>
+                    <span style="color: red">*</span> <strong>Riding During:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -233,7 +237,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Riding After:</strong>
+                    <span style="color: red">*</span> <strong>Riding After:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -255,7 +259,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Understands Directions:</strong>
+                    <span style="color: red">*</span> <strong>Understands Directions:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -277,7 +281,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Participates in Exercises:</strong>
+                    <span style="color: red">*</span> <strong>Participates in Exercises:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -299,7 +303,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>Participates in Games:</strong>
+                    <span style="color: red">*</span> <strong>Participates in Games:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
@@ -321,7 +325,7 @@
 
             <div class="observation_eval_row">
                 <div class="name_column">
-                    <strong>General Attitude:</strong>
+                    <span style="color: red">*</span> <strong>General Attitude:</strong>
                 </div>
                 <br>
                 <div class="willingness_column">
